[tool.poetry]
name = "porchestrator"
version = "0.1.0"
description = ""
authors = ["Jayasimha Raghavan <mr.jayasimha@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
prefect = "^2.19.7"
boto3 = "^1.21.7"
loguru = "^0.7.2"
sendgrid = "^6.11.0"
pyyaml = "^6.0"

# Create dependency for test
[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^7.1.0"
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.8.4"

[tool.semantic_release]
version_variable = "orchestrator/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
branch = "main"
upload_to_pypi = false
tag_format = "v{version}"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
