[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = "A robust task orchestration framework with support for parallel execution, retry policies, and monitoring"
authors = ["Jayasimha Raghavan (j-raghavan)"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "orchestrator", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
pydantic = "^2.0.0"
result = "^0.17.0"
asyncpg = "^0.29.0"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
ruff = "^0.3.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = ["src/orchestrator/__init__.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_repository = true
build_command = "poetry build"
